@@ -23,11 +23,11 @@
  */
 package com.synopsys.integration.alert.common.descriptor.config.ui;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import com.synopsys.integration.alert.common.descriptor.config.field.ConfigField;
 import com.synopsys.integration.alert.common.descriptor.config.field.SelectConfigField;
@@ -37,7 +37,7 @@ import com.synopsys.integration.alert.common.provider.ProviderContentType;
 import com.synopsys.integration.alert.web.model.configuration.FieldModel;
 import com.synopsys.integration.alert.web.model.configuration.FieldValueModel;
 
-public class ProviderDistributionUIConfig extends UIConfig {
+public abstract class ProviderDistributionUIConfig extends UIConfig {
     public static final String KEY_NOTIFICATION_TYPES = "provider.distribution.notification.types";
     public static final String KEY_FORMAT_TYPE = "provider.distribution.format.type";
 
@@ -54,8 +54,12 @@ public class ProviderDistributionUIConfig extends UIConfig {
             Collectors.toList()), this::validateNotificationTypes);
         final ConfigField formatField = SelectConfigField.createRequired(KEY_FORMAT_TYPE, "Format", provider.getSupportedFormatTypes().stream().map(FormatType::name).collect(Collectors.toList()));
 
-        return Arrays.asList(notificationTypesField, formatField);
+        final List<ConfigField> configFields = List.of(notificationTypesField, formatField);
+        final List<ConfigField> providerDistributionFields = createProviderDistributionFields();
+        return Stream.concat(configFields.stream(), providerDistributionFields.stream()).collect(Collectors.toList());
     }
+
+    public abstract List<ConfigField> createProviderDistributionFields();
 
     private Collection<String> validateNotificationTypes(final FieldValueModel fieldToValidate, final FieldModel fieldModel) {
         final Collection<String> notificationTypes = Optional.ofNullable(fieldToValidate.getValues()).orElse(List.of());
